# Transformer

./: AUTHORS  ChangeLog  _notes_APR.md  _notes_APR.txt  requirements_dev.txt  setup.cfg
Transformer.egg-info/: PKG-INFO  SOURCES.txt  pbr.json
Transformer/Utilities/: MultiprocessingHelper.py
docs/source/: Transformer.Analysis.Structure.rst  Transformer.Analysis.rst  Transformer.Framework.Convenience.rst  Transformer.Framework.Filters.rst  Transformer.IO.StructureIO.rst  Transformer.Screening.MetadiseCalculator.rst  Transformer.Screening.TotalEnergyCalculatorBase.rst  Transformer.Utilities.IOHelper.rst  Transformer.Utilities.rst  Transformer.rst  conf.py
