[metadata]
name = Transformer
author = Jonathan M Skelton
author-email = jonathan.skelton@manchester.ac.uk
summary = Transformer is a Python library for transforming structures by performing atomic substitutions.
description-file = README
home-page = https://github.com/JMSkelton/Transformer
license = LICENSE

[options]
packages = find:

[files]
packages =
    Transformer

[entry_points]
console_scripts =
    automabot = Transformer.IO.StructureIO .__main__:main