[metadata]
name = Transformer
author = AUTHOR
author-email = jonathan.skelton@manchester.ac.uk
summary = Transformer is a Python library for transforming structures by performing atomic substitutions.
description-file = README.md
home-page = https://github.com/JMSkelton/Transformer
license = LICENSE

[options]
packages = find:

[files]
packages =
    Transformer

[build_sphinx]
builders = html, man
source-dir = docs/source
build-dir = docs/build
all-files = 1
warning-is-error = 1

[entry_points]